# langchain_tutorial

./: pyproject.toml
Chapter-1/: 2_Messages.ipynb  3_Structured_outputs.ipynb
Chapter-2/: 1_first_chain.ipynb  2_parallel_chains.ipynb  3_conditional_chains.ipynb
Chapter-3/: 1_ReAct_Agent_Intro.ipynb  3_Diff_RAG_MCP_Tools_Agents.ipynb  3_ReAct_DB_Agent.ipynb  demo.py  init_db.py
Chapter-3/SalesDB/: sales.db
