[project]
name = "langchain-tutorial"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.1.0",
    "langchain>=1.2.6",
    "langchain-groq>=1.1.1",
    "langchain-openai>=1.1.7",
    "openai>=2.15.0",
    "wikipedia>=1.4.0",
]
